prod: cheat sheet additions

--- a/cheatsheet.html
+++ b/cheatsheet.html
@@ -52,6 +52,7 @@
         .list-group-item-dark {
             background-color: hsl(210, 10%, 23%) !important;
             border-color: hsl(210, 11%, 15%) !important;
+            text-decoration: underline !important;
         }
 
         .list-group-item-dark:hover,
@@ -81,24 +82,23 @@
                 <div class="list-group position-sticky">
                     <a href="#trigonometricnums"
                         class="list-group-item list-group-item-dark list-group-item-action">Trigonometric Numbers</a>
+                    <a href="#absolute" class="list-group-item list-group-item-dark list-group-item-action">Absolute
+                        Value Properties</a>
+                    <a href="#roots" class="list-group-item list-group-item-dark list-group-item-action">Root
+                        Properties</a>
+                    <a href="#identities" class="list-group-item list-group-item-dark list-group-item-action">Popular
+                        Identities</a>
                     <a href="#factorials" class="list-group-item list-group-item-dark list-group-item-action">Populas
                         Factorials</a>
                     <a href="#powoften" class="list-group-item list-group-item-dark list-group-item-action">Powers of
                         Ten</a>
-                    <a href="#powoftenneg" class="list-group-item list-group-item-dark list-group-item-action"><i
-                            class="bi bi-arrow-return-right"></i> Negative</a>
-                    <a href="#powoftenpos" class="list-group-item list-group-item-dark list-group-item-action"><i
-                            class="bi bi-arrow-return-right"></i> Positive</a>
-                    <a href="#identities" class="list-group-item list-group-item-dark list-group-item-action">Popular
-                        Identities</a>
                     <a href="#periodictable"
                         class="list-group-item list-group-item-dark list-group-item-action">Periodic
                         Table</a>
-                    <a href="#cell" class="list-group-item list-group-item-dark list-group-item-action">Plant and Animal
-                        Cell Parts</a>
                     <a href="#dnarna" class="list-group-item list-group-item-dark list-group-item-action">DNA and RNA
                         Parts</a>
                 </div>
+                <p class="mt-3">&#129300; you do not understand something? <a class="hover-link" href="contact.html">Send us an email</a> and we will explain it to you!</p>
             </div>
         </div>
         <div class="col-md-9 mt-5 text-center">
@@ -137,6 +137,160 @@
                             <td>1</td>
                             <td>0</td>
                             <td>-</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </section>
+            <section id="absolute">
+                <h3>Absolute Value Properties</h3>
+                <table class="table table-bordered text-white w-100" style="cursor: crosshair;">
+                    <thead class="bg-primary head">
+                        <tr>
+                            <th>Property</th>
+                            <th>Solution</th>
+                        </tr>
+                    </thead>
+                    <tbody class="formulas-body">
+                        <tr>
+                            <td>|x| = y<sup>+</sup></td>
+                            <td>x=y OR x=-y</td>
+                        </tr>
+                        <tr>
+                            <td>|x| &#62; y<sup>+</sup></td>
+                            <td>x>y OR x&#60;-y</td>
+                        </tr>
+                        <tr>
+                            <td>|x| &#60; y<sup>+</sup></td>
+                            <td>-y&#60;x&#60;y</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </section>
+            <section id="roots">
+                <h3>Root Properties</h3>
+                <table class="table table-bordered text-white w-100" style="cursor: crosshair;">
+                    <thead class="bg-primary head">
+                        <tr>
+                            <th>Property</th>
+                            <th>Solution</th>
+                        </tr>
+                    </thead>
+                    <tbody class="formulas-body">
+                        <tr>
+                            <td><sup>n</sup>&#8730;x<sup>n</sup></td>
+                            <td>|x|</td>
+                        </tr>
+                        <tr>
+                            <td>(<sup>n</sup>&#8730;x)<sup>n</sup></td>
+                            <td>x</td>
+                        </tr>
+                        <tr>
+                            <td><sup>n</sup>&#8730;(<sup>m</sup>&#8730;x)</td>
+                            <td><sup>nm</sup>&#8730;x</td>
+                        </tr>
+                        <tr>
+                            <td><sup>n</sup>&#8730;x<sup>n</sup>&#8730;y</td>
+                            <td><sup>n</sup>&#8730;xy</td>
+                        </tr>
+                        <tr>
+                            <td><sup><sup>n</sup>&#8730;x</sup>&frasl;<sub><sup>n</sup>&#8730;y</sub></td>
+                            <td><sup>n</sup>&#8730;<sup>x</sup>&frasl;<sub>y</sub></td>
+                        </tr>
+                        <tr>
+                            <td>x&#215;<sup>n</sup>&#8730;x</td>
+                            <td><sup>n</sup>&#8730;x<sup>n</sup>x</td>
+                        </tr>
+                        <tr>
+                            <td><sup>nm</sup>&#8730;x<sup>km</sup></td>
+                            <td><sup>n</sup>&#8730;x<sup>k</sup></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </section>
+            <section id="identities">
+                <h3>Popular Identities</h3>
+                <table class="table table-bordered text-white w-100" style="cursor: crosshair;">
+                    <thead class="bg-primary head">
+                        <tr>
+                            <th>Simplified</th>
+                            <th>Expanded</th>
+                        </tr>
+                    </thead>
+                    <tbody class="formulas-body">
+                        <tr>
+                            <td>(a + b)<sup>2</sup></td>
+                            <td>a<sup>2</sup> + 2ab + b<sup>2</sup></td>
+                        </tr>
+                        <tr>
+                            <td>(a - b)<sup>2</sup></td>
+                            <td>a<sup>2</sup> - 2ab + b<sup>2</sup></td>
+                        </tr>
+                        <tr>
+                            <td>(a + b)<sup>3</sup></td>
+                            <td>a<sup>3</sup> + 3a<sup>2</sup>b + 3ab<sup>2</sup> + b<sup>3</sup></td>
+                        </tr>
+                        <tr>
+                            <td>(a - b)<sup>3</sup></td>
+                            <td>a<sup>3</sup> - 3a<sup>2</sup>b + 3ab<sup>2</sup> - b<sup>3</sup></td>
+                        </tr>
+                        <tr>
+                            <td>(a + b)<sup>4</sup></td>
+                            <td>a<sup>4</sup> + 4a<sup>3</sup>b + 6a<sup>2</sup>b<sup>2</sup> + 4ab<sup>3</sup> +
+                                b<sup>4</sup></td>
+                        </tr>
+                        <tr>
+                            <td>(a - b)<sup>4</sup></td>
+                            <td>a<sup>4</sup> - 4a<sup>3</sup>b + 6a<sup>2</sup>b<sup>2</sup> - 4ab<sup>3</sup> +
+                                b<sup>4</sup></td>
+                        </tr>
+                        <tr>
+                            <td>a<sup>2</sup> + b<sup>2</sup></td>
+                            <td>(a + b)<sup>2</sup> - 2ab OR (a - b)<sup>2</sup> + 2ab</td>
+                        </tr>
+                        <tr>
+                            <td>a<sup>2</sup> - b<sup>2</sup></td>
+                            <td>(a + b)(a - b)</td>
+                        </tr>
+                        <tr>
+                            <td>a<sup>3</sup> + b<sup>3</sup></td>
+                            <td>(a + b)(a<sup>2</sup> - ab + b<sup>2</sup>) OR (a + b)<sup>3</sup> - 3ab(a + b)</td>
+                        </tr>
+                        <tr>
+                            <td>a<sup>3</sup> - b<sup>3</sup></td>
+                            <td>(a - b)(a<sup>2</sup> + ab + b<sup>2</sup>) OR (a - b)<sup>3</sup> + 3ab(a - b)</td>
+                        </tr>
+                        <tr>
+                            <td>a<sup>4</sup> + b<sup>4</sup></td>
+                            <td>(a + b)<sup>4</sup> - 2ab(2a<sup>2</sup> + 2b<sup>2</sup> + 3ab) OR (a - b)<sup>4</sup>
+                                + 2ab(2a<sup>2</sup> - 2b<sup>2</sup> + 3ab)
+                        </tr>
+                        </tr>
+                        <tr>
+                            <td>a<sup>4</sup> - b<sup>4</sup></td>
+                            <td>(a - b)(a + b)(a<sup>2</sup> + b<sup>2</sup>)
+                        </tr>
+                        </tr>
+                        <tr>
+                            <td>a<sup>16</sup> - b<sup>16</sup></td>
+                            <td>(a - b)(a + b)(a<sup>2</sup> + b<sup>2</sup>)(a<sup>4</sup> +
+                                b<sup>4</sup>)(a<sup>8</sup> + b<sup>8</sup>)
+                        </tr>
+                        </tr>
+                        <tr>
+                            <td>(a + b + c)<sup>2</sup></td>
+                            <td>a<sup>2</sup> + b<sup>2</sup> + c<sup>2</sup> + 2ab + 2bc + 2ac </td>
+                        </tr>
+                        <tr>
+                            <td>(a - b + c)<sup>2</sup></td>
+                            <td>a<sup>2</sup> + b<sup>2</sup> + c<sup>2</sup> - 2ab - 2bc + 2ac </td>
+                        </tr>
+                        <tr>
+                            <td>(a + b - c)<sup>2</sup></td>
+                            <td>a<sup>2</sup> + b<sup>2</sup> + c<sup>2</sup> + 2ab - 2bc - 2ac </td>
+                        </tr>
+                        <tr>
+                            <td>(a - b - c)<sup>2</sup></td>
+                            <td>a<sup>2</sup> + b<sup>2</sup> + c<sup>2</sup> - 2ab + 2bc - 2ac </td>
                         </tr>
                     </tbody>
                 </table>
@@ -194,46 +348,6 @@
                         <tr>
                             <td>10!</td>
                             <td>3,628,800</td>
-                        </tr>
-                        <tr>
-                            <td>11!</td>
-                            <td>39,916,800</td>
-                        </tr>
-                        <tr>
-                            <td>12!</td>
-                            <td>479,001,600</td>
-                        </tr>
-                        <tr>
-                            <td>13!</td>
-                            <td>6,227,020,800</td>
-                        </tr>
-                        <tr>
-                            <td>14!</td>
-                            <td>87,178,291,200</td>
-                        </tr>
-                        <tr>
-                            <td>15!</td>
-                            <td>1,307,674,368,000</td>
-                        </tr>
-                        <tr>
-                            <td>16!</td>
-                            <td>20,922,789,888,000</td>
-                        </tr>
-                        <tr>
-                            <td>17!</td>
-                            <td>355,687,428,096,000</td>
-                        </tr>
-                        <tr>
-                            <td>18!</td>
-                            <td>6,402,373,705,728,000</td>
-                        </tr>
-                        <tr>
-                            <td>19!</td>
-                            <td>121,645,100,408,832,000</td>
-                        </tr>
-                        <tr>
-                            <td>20!</td>
-                            <td>2,432,902,008,176,640,000</td>
                         </tr>
                     </tbody>
                 </table>
@@ -423,96 +537,9 @@
                     </tbody>
                 </table>
             </section>
-            <section id="identities">
-                <h3>Popular Identities</h3>
-                <table class="table table-bordered text-white w-100" style="cursor: crosshair;">
-                    <thead class="bg-primary head">
-                        <tr>
-                            <th>Simplified</th>
-                            <th>Expanded</th>
-                        </tr>
-                    </thead>
-                    <tbody class="formulas-body">
-                        <tr>
-                            <td>(a + b)<sup>2</sup></td>
-                            <td>a<sup>2</sup> + 2ab + b<sup>2</sup></td>
-                        </tr>
-                        <tr>
-                            <td>(a - b)<sup>2</sup></td>
-                            <td>a<sup>2</sup> - 2ab + b<sup>2</sup></td>
-                        </tr>
-                        <tr>
-                            <td>(a + b)<sup>3</sup></td>
-                            <td>a<sup>3</sup> + 3a<sup>2</sup>b + 3ab<sup>2</sup> + b<sup>3</sup></td>
-                        </tr>
-                        <tr>
-                            <td>(a - b)<sup>3</sup></td>
-                            <td>a<sup>3</sup> - 3a<sup>2</sup>b + 3ab<sup>2</sup> - b<sup>3</sup></td>
-                        </tr>
-                        <tr>
-                            <td>(a + b)<sup>4</sup></td>
-                            <td>a<sup>4</sup> + 4a<sup>3</sup>b + 6a<sup>2</sup>b<sup>2</sup> + 4ab<sup>3</sup> + b<sup>4</sup></td>
-                        </tr>
-                        <tr>
-                            <td>(a - b)<sup>4</sup></td>
-                            <td>a<sup>4</sup> - 4a<sup>3</sup>b + 6a<sup>2</sup>b<sup>2</sup> - 4ab<sup>3</sup> + b<sup>4</sup></td>
-                        </tr>
-                        <tr>
-                            <td>a<sup>2</sup> + b<sup>2</sup></td>
-                            <td>(a + b)<sup>2</sup> - 2ab or (a - b)<sup>2</sup> + 2ab</td>
-                        </tr>
-                        <tr>
-                            <td>a<sup>2</sup> - b<sup>2</sup></td>
-                            <td>(a + b)(a - b)</td>
-                        </tr>
-                        <tr>
-                            <td>a<sup>3</sup> + b<sup>3</sup></td>
-                            <td>(a + b)(a<sup>2</sup> - ab + b<sup>2</sup>) or (a + b)<sup>3</sup> - 3ab(a + b)</td>
-                        </tr>
-                        <tr>
-                            <td>a<sup>3</sup> - b<sup>3</sup></td>
-                            <td>(a - b)(a<sup>2</sup> + ab + b<sup>2</sup>) or (a - b)<sup>3</sup> + 3ab(a - b)</td>
-                        </tr>
-                        <tr>
-                            <td>a<sup>4</sup> + b<sup>4</sup></td>
-                            <td>(a + b)<sup>4</sup> - 2ab(2a<sup>2</sup> + 2b<sup>2</sup> + 3ab) or (a - b)<sup>4</sup> + 2ab(2a<sup>2</sup> - 2b<sup>2</sup> + 3ab)</tr>
-                        </tr>
-                        <tr>
-                            <td>a<sup>4</sup> - b<sup>4</sup></td>
-                            <td>(a - b)(a + b)(a<sup>2</sup> + b<sup>2</sup>)</tr>
-                        </tr>
-                        <tr>
-                            <td>a<sup>16</sup> - b<sup>16</sup></td>
-                            <td>(a - b)(a + b)(a<sup>2</sup> + b<sup>2</sup>)(a<sup>4</sup> + b<sup>4</sup>)(a<sup>8</sup> + b<sup>8</sup>)</tr>
-                        </tr>
-                        <tr>
-                            <td>(a + b + c)<sup>2</sup></td>
-                            <td>a<sup>2</sup> + b<sup>2</sup> + c<sup>2</sup> + 2ab + 2bc + 2ac </td>
-                        </tr>
-                        <tr>
-                            <td>(a - b + c)<sup>2</sup></td>
-                            <td>a<sup>2</sup> + b<sup>2</sup> + c<sup>2</sup> - 2ab - 2bc + 2ac </td>
-                        </tr>
-                        <tr>
-                            <td>(a + b - c)<sup>2</sup></td>
-                            <td>a<sup>2</sup> + b<sup>2</sup> + c<sup>2</sup> + 2ab - 2bc - 2ac </td>
-                        </tr>
-                        <tr>
-                            <td>(a - b - c)<sup>2</sup></td>
-                            <td>a<sup>2</sup> + b<sup>2</sup> + c<sup>2</sup> - 2ab + 2bc - 2ac </td>
-                        </tr>
-                    </tbody>
-                </table>
-            </section>
             <section id="periodictable">
                 <h3>Periodic Table</h3>
                 <img src="Assets/periodic-table.png" alt="periodic table of elements" class="border mb-3"
-                    onclick="openImage(this.src, this.alt, this.naturalWidth, this.naturalHeight)" width="100%"
-                    height="100%" data-bs-toggle="tooltip" data-bs-placement="left" title="Click to open" />
-            </section>
-            <section id="cell">
-                <h3>Plant and Animal Cell Parts</h3>
-                <img src="Assets/plant-animal-cell.png" alt="plant and animal cell parts" class="border mb-3"
                     onclick="openImage(this.src, this.alt, this.naturalWidth, this.naturalHeight)" width="100%"
                     height="100%" data-bs-toggle="tooltip" data-bs-placement="left" title="Click to open" />
             </section>
@@ -525,7 +552,7 @@
         </div>
     </div>
     <!-- SCRIPTS START -->
-    
+
     <script src="dist/back-to-top.js"></script>
     <script>
         let storage = window.localStorage, formulas;
