--- a/index.html
+++ b/index.html
@@ -124,8 +124,9 @@
                 <h2 class="text-warning fw-normal">Open to suggestions and new ideas</h2>
                 <p class="lead">We really appreciate feedback and suggestions as it is the only way for us to know if we
                     have done any mistake or could have done something better. Feel free to <a
-                        href="mailto:mathflare@pm.me" target="_blank" rel="noopener">email us</a> or use our <a
-                        href="contact.html">contact form</a> to report any mistakes or suggest an addition to our site.
+                        href="mailto:mathflare@pm.me" class="hover-link" target="_blank" rel="noopener">email us</a> or
+                    use our <a href="contact.html" class="hover-link">contact form</a> to report any mistakes or suggest
+                    an addition to our site.
                 </p>
             </div>
             <div class="col-md">
