--- a/dnarnacontent.html
+++ b/dnarnacontent.html
@@ -45,7 +45,7 @@
     <div id="nav-container"></div>
     <!-- NAVBAR END -->
     <div class="center">
-        <h1 class="text-white px-4">DNA/RNA Content</h1>
+        <h1 class="text-white px-4">DNA&#8725;RNA Content</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <form autocomplete="off" spellcheck="false">
             <div class="center-form">
