refactor: light refactoring

--- a/complementarydna.html
+++ b/complementarydna.html
@@ -62,7 +62,7 @@
                 <div class="input-group">
                     <textarea id="dnastring" placeholder="eg. ATTGC" class="form-control input-group-item message"
                         required></textarea>
-                    <button type="reset" class="btn btn-danger" id="clear">Clear</button>
+                    <button type="reset" class="btn btn-danger" id="clearbtn">Clear</button>
                 </div>
             </div>
             <br />
@@ -118,7 +118,6 @@
         <br />
     </div>
     <!-- SCRIPTS START -->
-
     <script src="dist/complementary-dna.js"></script>
     <noscript><strong class="noscript">You have to enable JavaScript to run this app.</strong></noscript>
     <!-- SCRIPT END -->
