--- a/complementaryrna.html
+++ b/complementaryrna.html
@@ -62,7 +62,7 @@
                 <div class="input-group">
                     <textarea id="rnastring" placeholder="eg. ATTGC" class="form-control input-group-item message"
                         required></textarea>
-                    <button type="reset" class="btn btn-danger" id="clear">Clear</button>
+                    <button type="reset" class="btn btn-danger" id="clearbtn">Clear</button>
                 </div>
             </div>
             <br />
