--- a/dnarnacontent.html
+++ b/dnarnacontent.html
@@ -6,11 +6,12 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MathFlare - DNA/RNA Content</title>
-    <meta name="title" content="MathFlare - DNA/RNA Content">
-    <meta name="og:title" content="MathFlare - DNA/RNA Content" />
-    <meta name="twitter:title" content="MathFlare - DNA/RNA Content" />
-    <meta name="keywords" content="dna, rna, percentage, dna/rna content, , biology, genetics, mathflare, math flare">
+    <title>MathFlare - DNA and RNA Contents</title>
+    <meta name="title" content="MathFlare - DNA and RNA Contents">
+    <meta name="og:title" content="MathFlare - DNA and RNA Contents" />
+    <meta name="twitter:title" content="MathFlare - DNA and RNA Contents" />
+    <meta name="keywords"
+        content="dna, rna, percentage, rna content,cg content , biology, genetics, mathflare, math flare">
     <meta name="description" content="Calculate the DNA/RNA content percentage." />
     <meta name="og:description" content="Calculate the DNA/RNA content percentage." />
     <meta name="twitter:description" content="Calculate the DNA/RNA content percentage." />
@@ -45,7 +46,7 @@
     <div id="nav-container"></div>
     <!-- NAVBAR END -->
     <div class="center">
-        <h1 class="text-white px-4">DNA&#8725;RNA Content</h1>
+        <h1 class="text-white px-4">DNA and RNA Contents</h1>
         <hr class="bg-danger" style="width: 60%;" />
         <form autocomplete="off" spellcheck="false">
             <div class="center-form">
@@ -60,17 +61,14 @@
                 <div class="input-group">
                     <textarea id="sequence" placeholder="eg. ATTGC" class="form-control input-group-item message"
                         required></textarea>
-                    <button type="reset" class="btn btn-danger" id="clear">Clear</button>
+                    <button type="reset" class="btn btn-danger" id="clearbtn">Clear</button>
                 </div>
             </div>
             <br />
             <div class="center-form">
                 <input type="submit" id="dnarnacalc" class="btn btn-success btn-lg" value="Calculate">
             </div>
-            <div class="my-4">
-                <a href="https://duckduckgo.com/?q=generate+rna+complement" target="_blank" rel="noopener"
-                    class="btn btn-outline-light">Find information on the web</a>
-            </div>
+            <br />
             <table class="table table-bordered text-white mx-auto" style="cursor: crosshair;">
                 <thead>
                     <tr>
