fix: minor bio-chemistry changes

--- a/proteintranslation.html
+++ b/proteintranslation.html
@@ -59,7 +59,8 @@
             <h4 class="text-white">Enter the sequence</h4>
             <div class="center-form">
                 <div class="input-group">
-                    <textarea id="sequence" placeholder="eg. AGC" class="form-control message input-group-item" required></textarea>
+                    <textarea id="sequence" placeholder="eg. AGC" class="form-control message input-group-item"
+                        required></textarea>
                     <button type="reset" class="btn btn-danger">Clear</button>
                 </div>
             </div>
@@ -73,6 +74,7 @@
             </div>
             <p class="p-2"><span class="text-warning">X</span> means that a character you entered in the sequence is not
                 valid.</p>
+            <p class="p-2"><span class="text-success">*</span> means end codon</p>
         </form>
         <p id="hasxmessage" class="text-warning p-2"></p>
         <div style="max-height: 1em;">
